Fix padding for share icons on small screen

--- a/src/css/post.css
+++ b/src/css/post.css
@@ -14,6 +14,14 @@
   padding: 0px 30px !important;
 }
 
+@media (max-width: 35em) {
+  .share-container {
+    justify-content: space-evenly;
+  }
+  .share {
+    padding: 0px !important;
+  }
+}
 .share:hover {
   filter: brightness(0.8);
 }
